--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,9 @@
 .navbar{
     height: 80px;
+    width: 100%;
     background-color: rgb(255, 255, 255) !important;
     box-shadow: 0 0 5px black !important;
+    /* border: 2px solid blueviolet; */
 }
 
 .navbar-brand img{
@@ -20,7 +22,8 @@
 
 .jumbotron{
     height: 400px;
-    width: 100%;
+    /* width: 100vw; */
+    /* border: 2px solid blueviolet; */
     background-image: url(./imag/sever-gb2018909a_1280.jpg);
     background-position: center;
     background-size: cover;
@@ -109,7 +112,8 @@ h2{
     width: 100%;
     background-size: cover;
     border-radius: 100px 0 100px;
-    padding-top: 10px;
+    border: 2px solid aqua;
+    margin-top: 10px;
     filter: grayscale(50%);
 }
 
@@ -130,13 +134,126 @@ h2{
     text-shadow: 0 0 3px black;
 }
 
+.sec_p {
+    /* border: 2px solid red; */
+    padding: 0;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+}
 
+.sec_p a{
+    text-decoration: none;
+    color: blue;
+    font-weight: bold;
+    font-size: 30px;
+}
 
+.sec_p a:hover {
+    color: grey;
+}
 
+.car {
+    /* background-color: rgb(50, 142, 255); */
+    background-image: url(./imag/linea_libre.jpg);
+    background-size: cover;
+} 
 
-.separacion {
+.carousel{
+    height: 700px;
+}
+
+.carousel-item{
+    height: 700px;
+}
+
+.carousel-caption {
+    text-shadow: 0 0 5px black;
+    background-color: rgba(127, 138, 255, 0.412);
+    border: 2px solid aqua;
+    color: #fff !important;
+    margin: 30px;
+    border-radius: 20px;
+}
+
+.grip_areas{
+    padding-right: 10px;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(7, 100px);
+    /* border: 2px solid blue; */
+}
+
+.area{
+    /* border: 2px solid green; */
+    padding-top: 35px;
+    color: blue;
+    font-size: bold;
+    text-shadow: 0 2px 2px white;
+}
+
+.ar_t{
+    background-color: white;
+    border: blue;
+    border-radius: 50%;
+}
+
+.area1{
+    color: aqua;
+    font-size: bold;
+    /* text-shadow: 0 2px 0 white, 0 2px 0 black; */
+}
+
+.area3{
+    padding: 0;
+    text-align: justify;
+}
+
+.area5{
+    padding: 0;
+    text-align: justify;
+}
+
+.area7{
+    padding: 0;
+    text-align: justify;
+}
+
+/* .separacion {
     height: 10px;
     background-color: aqua;
+} */
+
+footer{
+    background-color: aqua;
+    color: blue;
+    text-align: center;
+    font-size: 30px;
+    padding: 20px;
+}
+
+footer p{
+    margin-bottom: 20px;
+}
+
+footer i{
+    color: grey;
+    font-size: 50px;
+    letter-spacing: 30px;
+}
+
+.subir{
+    height: 40px;
+    width: 40px;
+    background-color: aqua;
+    color: blue;
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    text-align: center;
+    line-height: 40px;
+    font-size: 28px;
+    box-shadow: 0 0 5px #fff;
 }
 
 @media only screen and (min-width:0) and (max-width:576px) {
@@ -149,3 +266,57 @@ h2{
     }
     
 }
+
+@media only screen and (min-width:576px) {
+    .grip_areas{
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: repeat(3,200px);
+    }
+
+    .area1{
+        border: 10px solid aqua;
+        border-style: groove;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        padding-top: 50px;
+        margin: 40px;
+        margin: 20px 80px;
+    }
+    .area2{
+        border: 10px solid aqua;
+        border-style: groove;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        margin: 40px;
+    }
+    .area3{
+        grid-column: 3/5;
+        grid-row: 1/2;
+        padding-top: 8%;
+    }
+    .area4{
+        border: 10px solid aqua;
+        border-style: groove;
+        grid-column: 2/3;
+        grid-row: 2/3;
+        margin: 40px;
+    }
+    .area5{
+        grid-column: 3/5;
+        grid-row: 2/3;
+        padding-top: 8%;
+    }
+    .area6{
+        border: 10px solid aqua;
+        border-style: groove;
+        grid-column: 2/3;
+        grid-row: 3/4;
+        margin: 40px;
+    }
+    .area7{
+        grid-column: 3/5;
+        grid-row: 3/4;
+        padding-top: 8%;
+    }
+
+} 
